lisatud index2.html ja style2.css, pilt

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h2>Tere tulemast!</h2>
         <div>
             Mina olen TARgv23 õpilane Darja Suhhanova. Ma õpin Pythonit TTHK-s (kutsehariduskeskuses) ja kodus õpin iseseisvalt JavaScripti.</div>
+    <img src="img.png" width="200px" alt="piltike">
     </section>
 </main>
 <!--jalus-->
