--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/style2.css">
 </head>
 <body>
 <!--semaantilised HTML5 elemendid-->
@@ -23,10 +23,9 @@
 <!--Veebilehe sisu-->
 <main>
     <section>
-        <h2>HTML/CSS tööd</h2>
+        <h2>Tere tulemast!</h2>
         <div>
-            <a href="index2.html">Teine css kujundus</a>
-        </div>
+            Mina olen TARgv23 õpilane Darja Suhhanova. Ma õpin Pythonit TTHK-s (kutsehariduskeskuses) ja kodus õpin iseseisvalt JavaScripti.</div>
     </section>
 </main>
 <!--jalus-->
