new picture + some styles

--- a/index2.html
+++ b/index2.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="et">
 <!--veebilehe tehniline info-->
+
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
     <link rel="stylesheet" type="text/css" href="style/style2.css">
 </head>
+
 <body>
-<!--semaantilised HTML5 elemendid-->
-<!--Header-päis-->
-<header>
-    <h1>Darja Veebirakenduste tööd</h1>
-</header>
-<nav>
-    <ul>
-        <li><a href="index.html">Avaleht</a></li>
-        <li><a href="kursus.html">Kursuse info</a></li>
-        <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
-        <li><a href="tood.html">Tööd</a></li>
-    </ul>
-</nav>
-<!--Veebilehe sisu-->
-<main>
-    <section>
-        <h2>Tere tulemast!</h2>
-        <div>
-            Mina olen TARgv23 õpilane Darja Suhhanova. Ma õpin Pythonit TTHK-s (kutsehariduskeskuses) ja kodus õpin iseseisvalt JavaScripti.</div>
-    </section>
-</main>
-<!--jalus-->
-<footer>
-    D.S. &copy; 2024
-</footer>
+    <!--semaantilised HTML5 elemendid-->
+    <!--Header-päis-->
+    <header>
+        <h1>Darja Veebirakenduste tööd</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Avaleht</a></li>
+            <li><a href="kursus.html">Kursuse info</a></li>
+            <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
+            <li><a href="tood.html">Tööd</a></li>
+        </ul>
+    </nav>
+    <!--Veebilehe sisu-->
+    <main>
+        <section>
+            <h2>Tere tulemast!</h2>
+            <div>
+                Tere, mina olen Darja Suhhanova (neiupõlvenimi on Portnova),
+                25-aastane tudeng, kes hetkel elab Tallinnas, Eestis.
+                Õpin tarkvaraarendust TTHK-s (Tallinna Tööstushariduskeskus)
+                ja tähistame oma 26. sünnipäeva 16. novembril.
+                Olen põnevil eesootava teekonna pärast tehnoloogiamaailmas..
+            </div>
+            <img src="me.jpg" width="600" alt="Mina" class="image">
+        </section>
+    </main>
+    <!--jalus-->
+    <footer>
+        D.S. &copy; 2024
+    </footer>
 </body>
+
 </html>
