reorginezed the folder structure

--- a/web_html_css/html_style2/index2.html
+++ b/web_html_css/html_style2/index2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
-    <link rel="stylesheet" type="text/css" href="style/style2.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Avaleht</a></li>
-            <li><a href="kursus.html">Kursuse info</a></li>
+            <li><a href="index2.html">Avaleht</a></li>
+            <li><a href="kursus2.html">Kursuse info</a></li>
             <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
-            <li><a href="tood.html">Tööd</a></li>
+            <li><a href="tood2.html">Tööd</a></li>
         </ul>
     </nav>
     <!--Veebilehe sisu-->
@@ -33,7 +33,7 @@
                 ja tähistame oma 26. sünnipäeva 16. novembril.
                 Olen põnevil eesootava teekonna pärast tehnoloogiamaailmas..
             </div>
-            <img src="me.jpg" width="600" alt="Mina" class="image">
+            <img src="../me.jpg" width="600" alt="Mina" class="image">
         </section>
     </main>
     <!--jalus-->
