--- a/web_html_css/index.html
+++ b/web_html_css/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
