--- a/jQuery/jQuery.html
+++ b/jQuery/jQuery.html
@@ -1,77 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>jQuery</title>
+    <title>jQuery kasutamine</title>
     <link rel="stylesheet" href="queryStyle.css">
-
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-            crossorigin="anonymous"></script>
-    <script
-            src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"
-            integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c="
-            crossorigin="anonymous"></script>
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <script>
-        let open = true;
-        let imgEarth = $('#earth');
-        let div = $('div');
-        let btn = $('#btn');
-        let div1 = $('div#txt1');
         function orange() {
-            //if mouse is on div then color changes to orange
-            $('div#txt1, h1').css('color', 'orange');
+            $('div#txt, h1').css('color', 'orange');
         }
         function black() {
-            //if mouse is on div then color changes to orange
-            div.css('color', 'black');
+            $('div#txt').css('color', 'black');
         }
         function movement(event, ui) {
-            let place = ui.offset;
+            var place = ui.offset;
             $('#answer').html(place.top + " // " + place.left);
         }
+        let open = true;
         function show_hide() {
-            div1.slideToggle();
+            $('div#txt').slideToggle();
             if (open) {
                 open = false;
-                btn.val('Show');
+                $('#btn').val('Show');
             } else {
                 open = true;
-                btn.val('Hide');
+                $('#btn').val('Hide');
             }
         }
         function start() {
-            imgEarth.draggable;
-            imgEarth.bind("drag", movement);
-            div.mouseenter(orange);
-            div.mouseleave(black);
+            $('#png').draggable();
+            $('#png').bind("drag", movement);
+            $('div#txt, h1').mouseenter(orange);
+            $('div#txt').mouseleave(black);
         }
+
     </script>
 </head>
+
 <body onload="start()">
-<h1>JQuery</h1>
-<input type="button" value="-->" onclick="$('#txt1').animate({left: '600px'}, 1000)">
-<input type="button" value="<--" onclick="$('#txt1').animate({left: '0px'}, 5000)">
-<input type="button" value="Hide" id="btn" onclick="show_hide()">
-<div id="txt1">jQuery is a fast, small, and feature-rich JavaScript library.
-    It makes things like HTML document traversal and manipulation, event handling, animation,
-    and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
-    With a combination of versatility and extensibility,
-    jQuery has changed the way that millions of people write JavaScript.
-</div>
-<h2>jQuery CDN - library</h2>
-<div id="txt2">
-    <h4>The jQuery library contains the following features:</h4>
-    <ul>HTML/DOM manipulation</ul>
-    <ul>CSS manipulation</ul>
-    <ul>HTML event methods</ul>
-    <ul>Effects and animations</ul>
-    <ul>AJAX</ul>
-    <ul>Utilities</ul>
-</div>
-<img src="earth.png" alt="" id="earth">
-<div id="answer"></div>
+    <h1>JQuery</h1>
+    <input type="button" value="Move to the left" onclick="$('div#txt').animate({left: '600px'}, 1000)">
+    <input type="button" value="Move back" onclick="$('div#txt').animate({left: '0px'}, 5000)">
+    <input type="button" value="Hide" id="btn" onclick="show_hide()">
+    <div id="txt"> jQuery is a fast, small, and feature-rich JavaScript library.
+        It makes things like HTML document traversal and manipulation, event handling, animation,
+        and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
+        With a combination of versatility and extensibility,
+        jQuery has changed the way that millions of people write JavaScript.
+    </div>
+
+    <div id="txt2">
+        <h3>The jQuery library contains the following features:</h3>
+        <ul>
+            <li>HTML/DOM manipulation</li>
+            <li>CSS manipulation</li>
+            <li>HTML event methods</li>
+            <li>Effects and animations</li>
+            <li>AJAX</li>
+            <li>Utilities</li>
+        </ul>
+    </div>
+    <h2>jQuery CDN - library</h2>
+    <img src="earth.png" alt="png" id="png">
+    <div id="answer"></div>
+
 </body>
+
 </html>
