did it more correctly

--- a/web_html_css/kursus.html
+++ b/web_html_css/kursus.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="et">
-<!--veebilehe tehniline info-->
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +8,6 @@
 </head>
 
 <body>
-    <!--semaantilised HTML5 elemendid-->
-    <!--Header-päis-->
     <header>
         <meta charset="UTF-8">
         <h1>Darja Veebirakenduste tööd</h1>
@@ -23,9 +20,8 @@
             <li><a href="tood.html">Tööd</a></li>
         </ul>
     </nav>
-    <!--Veebilehe sisu-->
     <main>
-        <section id="first">
+        <section id="first" class="section">
             <h2>Veebirakenduste alused kursus</h2>
             <div>
                 <strong>Teemad:</strong>
@@ -36,15 +32,17 @@
                 </ol>
             </div>
         </section>
-        <section id="second">
+        <section id="second" class="section">
             <h2>Kasulikud lingid</h2>
             <div>
-                <div class="links">
-                    <a href="https://validator.w3.org/">HTML validator</a>
-                </div>
-                <div class="links">
-                    <a href="https://www.w3schools.com/">W3schools</a>
-                </div>
+                <ul class="links">
+                    <li>
+                        <a href="https://validator.w3.org/">HTML validator</a>
+                    </li>
+                    <li>
+                        <a href="https://www.w3schools.com/">W3schools</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
