--- a/web_html_css/tood.html
+++ b/web_html_css/tood.html
@@ -27,18 +27,26 @@
         <section>
             <h2>HTML/CSS tööd</h2>
             <div>
-                <div class="links">
-                    <a href="html_style2/index2.html">Teine css kujundus</a>
-                </div>
-                <div class="links">
-                    <a href="tabelid/index.html">Tabelid</a>
-                </div>
-                <div class="links">
-                    <a href="tabelid/lipud.html">Lipud</a>
-                </div>
-                <div class="links">
-                    <a href="form/vormid.html">Vormid</a>
-                </div>
+                <ul>
+                    <li class="links">
+                        <a href="html_style2/index2.html">Teine css kujundus</a>
+                    </li>
+                    <li class="links">
+                        <a href="tabelid/index.html">Tabelid</a>
+                    </li>
+                    <li class="links">
+                        <a href="tabelid/lipud.html">Lipud</a>
+                    </li>
+                    <li class="links">
+                        <a href="form/vormid.html">Vormid</a>
+                    </li>
+                    <li class="links">
+                        <a href="arvutused/saleOfCatsTable.html">Sale of cats</a>
+                    </li>
+                    <li class="links">
+                        <a href="jQuery/jquery.html">jQuery</a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
