--- a/web_html_css/index.html
+++ b/web_html_css/index.html
@@ -24,7 +24,7 @@
     </nav>
     <!--Veebilehe sisu-->
     <main>
-        <section>
+        <section class="section">
             <h2>Tere tulemast!</h2>
             <div>
                 Tere, mina olen Darja Suhhanova (neiupõlvenimi on Portnova),
