--- a/web_html_css/kursus.html
+++ b/web_html_css/kursus.html
@@ -25,7 +25,7 @@
             <h2>Veebirakenduste alused kursus</h2>
             <div>
                 <strong>Teemad:</strong>
-                <ol>
+                <ol class="list">
                     <li>HTML, CSS, JavaScript</li>
                     <li>PHP</li>
                     <li>Wordpress</li>
@@ -35,7 +35,7 @@
         <section id="second" class="section">
             <h2>Kasulikud lingid</h2>
             <div>
-                <ul class="links">
+                <ul class="list">
                     <li>
                         <a href="https://validator.w3.org/">HTML validator</a>
                     </li>
