--- a/web_html_css/tood.html
+++ b/web_html_css/tood.html
@@ -24,26 +24,26 @@
     </nav>
     <!--Veebilehe sisu-->
     <main>
-        <section>
+        <section class="section">
             <h2>HTML/CSS tööd</h2>
             <div>
-                <ul>
-                    <li class="links">
+                <ul class="list">
+                    <li>
                         <a href="html_style2/index2.html">Teine css kujundus</a>
                     </li>
-                    <li class="links">
+                    <li>
                         <a href="tabelid/index.html">Tabelid</a>
                     </li>
-                    <li class="links">
+                    <li>
                         <a href="tabelid/lipud.html">Lipud</a>
                     </li>
-                    <li class="links">
+                    <li>
                         <a href="form/vormid.html">Vormid</a>
                     </li>
-                    <li class="links">
+                    <li>
                         <a href="arvutused/saleOfCatsTable.html">Sale of cats</a>
                     </li>
-                    <li class="links">
+                    <li>
                         <a href="jQuery/jquery.html">jQuery</a>
                     </li>
                 </ul>
