--- a/web_html_css/index.html
+++ b/web_html_css/index.html
@@ -20,6 +20,7 @@
             <li><a href="kursus.html">Kursuse info</a></li>
             <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
             <li><a href="tood.html">Tööd</a></li>
+            <li><img src="img/season.png" alt="season"></li>
         </ul>
     </nav>
     <!--Veebilehe sisu-->
@@ -33,7 +34,7 @@
                 ja tähistame oma 26. sünnipäeva 16. novembril.
                 Olen põnevil eesootava teekonna pärast tehnoloogiamaailmas..
             </div>
-            <img src="me.jpg" width="600" alt="Mina" class="image">
+            <img src="img/me.jpg" width="600" alt="Mina" class="image">
         </section>
     </main>
     <!--jalus-->
