--- a/web_html_css/index.html
+++ b/web_html_css/index.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="et">
-<!--veebilehe tehniline info-->
 
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
-    <!--semaantilised HTML5 elemendid-->
-    <!--Header-päis-->
-    <header>
+    <header class="nav">
         <h1>Darja Veebirakenduste tööd</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Avaleht</a></li>
-            <li><a href="kursus.html">Kursuse info</a></li>
-            <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
-            <li><a href="tood.html">Tööd</a></li>
-            <li><img src="img/season.png" alt="season"></li>
-        </ul>
+    <nav class="nav">
+        <div class="menu">
+            <div><img src="img/season.png" alt="season" id="seasonImg"></div>
+            <div><a href="index.html">Avaleht</a></div>
+            <div><a href="kursus.html">Kursuse info</a></div>
+            <div><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></div>
+            <div><a href="tood.html">Tööd</a></div>
+        </div>
     </nav>
-    <!--Veebilehe sisu-->
     <main>
-        <section class="section">
-            <h2>Tere tulemast!</h2>
-            <div>
-                Tere, mina olen Darja Suhhanova (neiupõlvenimi on Portnova),
-                25-aastane tudeng, kes hetkel elab Tallinnas, Eestis.
-                Õpin tarkvaraarendust TTHK-s (Tallinna Tööstushariduskeskus)
-                ja tähistame oma 26. sünnipäeva 16. novembril.
-                Olen põnevil eesootava teekonna pärast tehnoloogiamaailmas..
-            </div>
-            <img src="img/me.jpg" width="600" alt="Mina" class="image">
-        </section>
+        <div class="frow">
+            <section class="section firstSec">
+                <h2>Tere tulemast!</h2>
+                <div>
+                    Tere, mina olen Darja Suhhanova (neiupõlvenimi on Portnova),
+                    25-aastane tudeng, kes hetkel elab Tallinnas, Eestis.
+                    Õpin tarkvaraarendust TTHK-s (Tallinna Tööstushariduskeskus)
+                    ja tähistame oma 26. sünnipäeva 16. novembril.
+                    Olen põnevil eesootava teekonna pärast tehnoloogiamaailmas..
+                </div>
+                <img src="img/me.jpg" width="600" alt="Mina" class="image">
+            </section>
+            <section class="section secondSec" c>
+                <h2 id="h2">Place for a duck!</h2>
+                <div>
+                    <img src="img/duck.png" id="duck" alt="duck">
+                </div>
+                <div id="address"></div>
+                <div id="flip">
+                    <h2>Klick me!</h2>
+                </div>
+                <div id="panel">Have a good day!</div>
+                <button id="fade">Click to fade in boxes</button>
+                ​<img id="snow" src="img/snowflakes/">
+                <div id="" style="width:80px;height:80px;display:none;background-color:green;"></div><br>
+                <div id="div3" style="width:80px;height:80px;display:none;background-color:blue;"></div>
+            </section>
+        </div>
+
     </main>
-    <!--jalus-->
     <footer>
         D.S. &copy; 2024
     </footer>
