--- a/web_html_css/tood.html
+++ b/web_html_css/tood.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html lang="et">
-<!--veebilehe tehniline info-->
 
 <head>
     <meta charset="UTF-8">
     <title>Darja Veebirakenduste tööd</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 
 <body>
-    <!--semaantilised HTML5 elemendid-->
-    <!--Header-päis-->
-    <header>
+    <header class="nav">
         <h1>Darja Veebirakenduste tööd</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Avaleht</a></li>
-            <li><a href="kursus.html">Kursuse info</a></li>
-            <li><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></li>
-            <li><a href="tood.html">Tööd</a></li>
-        </ul>
+    <nav class="nav">
+        <div class="menu">
+            <div><img src="img/season.png" alt="season" id="seasonImg"></div>
+            <div><a href="index.html">Avaleht</a></div>
+            <div><a href="kursus.html">Kursuse info</a></div>
+            <div><a href="https://darjaportnova23.thkit.ee/wp/" target="_blank">Wordpress- portfoolio</a></div>
+            <div><a href="tood.html">Tööd</a></div>
+        </div>
     </nav>
-    <!--Veebilehe sisu-->
     <main>
-        <section class="section">
-            <h2>HTML/CSS tööd</h2>
-            <div>
-                <ul class="list">
-                    <li>
-                        <a href="html_style2/index2.html">Teine css kujundus</a>
-                    </li>
-                    <li>
-                        <a href="tabelid/index.html">Tabelid</a>
-                    </li>
-                    <li>
-                        <a href="tabelid/lipud.html">Lipud</a>
-                    </li>
-                    <li>
-                        <a href="form/vormid.html">Vormid</a>
-                    </li>
-                    <li>
-                        <a href="arvutused/saleOfCatsTable.html">Sale of cats</a>
-                    </li>
-                    <li>
-                        <a href="jQuery/jquery.html">jQuery</a>
-                    </li>
-                </ul>
-            </div>
-        </section>
+        <div class="frow">
+            <section class="section firstSec">
+                <h2>HTML/CSS tööd</h2>
+                <div>
+                    <ul class="list">
+                        <li>
+                            <a href="html_style2/index2.html">Teine css kujundus</a>
+                        </li>
+                        <li>
+                            <a href="tabelid/index.html">Tabelid</a>
+                        </li>
+                        <li>
+                            <a href="tabelid/lipud.html">Lipud</a>
+                        </li>
+                        <li>
+                            <a href="form/vormid.html">Vormid</a>
+                        </li>
+                        <li>
+                            <a href="arvutused/saleOfCatsTable.html">Sale of cats</a>
+                        </li>
+                        <li>
+                            <a href="jQuery/jquery.html">jQuery</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </main>
-    <!--jalus-->
     <footer>
         D.S. &copy; 2024
     </footer>
