path to canvas, and just canvas

--- a/web_html_css/tood.html
+++ b/web_html_css/tood.html
@@ -47,6 +47,9 @@
                         <li>
                             <a href="jQuery/jquery.html">jQuery</a>
                         </li>
+                        <li>
+                            <a href="canvas/drawing.html">Canvas</a>
+                        </li>
                     </ul>
                 </div>
             </section>
