--- a/web_html_css/index.html
+++ b/web_html_css/index.html
@@ -48,10 +48,14 @@
                     <h2>Klick me!</h2>
                 </div>
                 <div id="panel">Have a good day!</div>
-                <button id="fade">Click to fade in boxes</button>
-                ​<img id="snow" src="img/snowflakes/">
-                <div id="" style="width:80px;height:80px;display:none;background-color:green;"></div><br>
-                <div id="div3" style="width:80px;height:80px;display:none;background-color:blue;"></div>
+                <button id="fade">Click to fade in/out boxes</button>
+                <div id="redBox" style="width:80px;height:80px;display:none;background-color:rgb(255, 0, 0);"></div>
+                <br>
+                <div id="greenBox" style="width:80px;height:80px;display:none;background-color:rgb(0, 213, 0);"></div>
+                <br>
+                <div id="blueBox" style="width:80px;height:80px;display:none;background-color:blue;"></div>
+                <input type="button" id="hideShow" value="Hide the gif!">
+                <div id="gif"><img src="img/Vho.gif" alt="Gif file"></div>
             </section>
         </div>
 
