placed opilased on their plases and added links to their site

--- a/web_html_css/tood.html
+++ b/web_html_css/tood.html
@@ -50,6 +50,9 @@
                         <li>
                             <a href="canvas/drawing.html">Canvas</a>
                         </li>
+                        <li>
+                            <a href="ryhmaveeb/ryhmaveeb.html">Xml + JavaScript + HTML + CSS</a>
+                        </li>
                     </ul>
                 </div>
             </section>
